# webex-transcriber

./: .gitignore  README.md  pyproject.toml
src/meeting_transcriber/: __init__.py  cli.py  logging_config.py  pipeline.py
src/meeting_transcriber/alignment/: aligner.py
src/meeting_transcriber/output/: formatter.py
src/meeting_transcriber/speaker/: detector.py  layout.py  timeline.py
src/meeting_transcriber/summary/: generator.py
src/meeting_transcriber/transcription/: whisper.py
src/meeting_transcriber/video/: extractor.py
tests/: test_aligner.py  test_extractor.py  test_formatter.py  test_integration.py  test_layout.py  test_summary.py  test_timeline.py  test_whisper.py
tests/fixtures/: make_test_video.py  synthetic.py
