[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "Transcribe and summarize WebEx meetings with visual speaker identification"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "ollama>=0.3.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "mlx-whisper>=0.4.0",
    "torch>=2.1.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
meeting-transcriber = "meeting_transcriber.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
